Brand ui bug fix

--- a/DigitallyPowerful/Views/User/Brand.cshtml
+++ b/DigitallyPowerful/Views/User/Brand.cshtml
@@ -43,20 +43,20 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row mt-3">
+                            <div class="row">
                                 <div class="col-md-6">
-                                    <div class="form-group form-floating-label">
+                                    <div class="form-group">
+                                        <label for="BrandProfile_Project">Project Type</label>
                                         <select class="form-control form-control" id="BrandProfile_Project">
                                             <option value="1">Influencer Marketing</option>
                                             <option value="2">Others</option>
                                         </select>
-                                        <label for="BirthDate" class="placeholder">Project Type</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="form-group form-floating-label">
-                                        <input type="text" class="form-control" id="BrandProfile_Category" required="">
-                                        <label for="BrandProfile_Category" class="placeholder">Category</label>
+                                    <div class="form-group" id="BrandProfile_Categoryflag" style="display:none">
+                                        <label for="BrandProfile_Category" >Category</label>
+                                        <input type="text" class="form-control" id="BrandProfile_Category" placeholder="Enter Category">
                                     </div>
                                 </div>
                             </div>
