--- a/DigitallyPowerful/Views/User/PasswordChange.cshtml
+++ b/DigitallyPowerful/Views/User/PasswordChange.cshtml
@@ -1,1 +1,51 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Login";
+    Layout = "~/Views/Shared/_UserLayout.cshtml";
+}
+
+<!DOCTYPE html>
+<html lang="en">
+
+<body class="login">
+    <header id="header" class="fixed-top " style="background: #36517e">
+        <div class="container d-flex align-items-center">
+            <a asp-controller="Home" asp-action="Index" class="logo me-auto"><img src="~/images/DigitallyPowerful.png" alt="Digitally Powerful" class="img-fluid"></a>
+        </div>
+    </header><!-- End Header -->
+    <div class="wrapper wrapper-login">
+        <!-- ======= Change Password START ======= -->
+        <div class="container container-login animated fadeIn">
+            <h3 class="text-center">Change Password</h3>
+            <div class="login-form">
+                <div class="form-group form-floating-label">
+                    <input id="changepassword_username" name="changepassword_username" type="text" class="form-control input-border-bottom" required>
+                    <label for="changepassword_username" class="placeholder">Email</label>
+                </div>
+                <div class="form-group form-floating-label">
+                    <input id="changepassword_password" name="changepassword_password" type="password" class="form-control input-border-bottom" required>
+                    <label for="changepassword_password" class="placeholder">Password</label>
+                    <div class="show-password">
+                        <i class="icon-eye"></i>
+                    </div>
+                </div>
+                <div class="form-group form-floating-label">
+                    <input id="changepassword_confirmpassword" name="changepassword_confirmpassword" type="password" class="form-control input-border-bottom" required>
+                    <label for="changepassword_confirmpassword" class="placeholder">Confirm Password</label>
+                    <div class="show-password">
+                        <i class="icon-eye"></i>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 text-center">
+                        <button class="btn btn-primary btn-rounded btn-login" id="Submit_Password">Submit</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <!-- ======= Change Password END ======= -->
+
+    </div>
+</body>
+
+</html>
