Bug fix and UI changes

--- a/DigitallyPowerful/Views/Home/Contact.cshtml
+++ b/DigitallyPowerful/Views/Home/Contact.cshtml
@@ -88,7 +88,7 @@
                                 <div class="sent-message" id="Sentmessage_successFlag">Your message has been sent. Thank you!</div>
                             </div>
                             <div class="text-center"><button type="submit" id="Contact_usbtn">Send Message</button></div>
-                            <div class="text-center"><button type="submit" id="Contact_usbtnloading">Sending...</button></div>
+                            <div class="text-center"><button type="submit" id="Contact_usbtnloading" style="display:none">Sending...</button></div>
                         </div>
                     </div>
 
