--- a/DigitallyPowerful/Views/Home/Index.cshtml
+++ b/DigitallyPowerful/Views/Home/Index.cshtml
@@ -9,8 +9,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-                    <h1>Best Marketing Solutions For Your Business</h1>
-                    <h2>We are team of talented influencers making Business Grow</h2>
+                    <h1>Get Digitally Powered With Us</h1>
+                    <h2>Best marketing solutions at one move. We are team of talented influencers making Business Grow</h2>
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <div class="row">
                             <div class="col-md-6">
@@ -97,22 +97,11 @@
                 <div class="row content">
                     <div class="col-lg-12">
                         <p>
-                            Digitally powerful is a team of multiple influencers/content creators who would be helping you out in your digital marketing requirements in a very digitally powerful mode.
-                            With an eye for detail we would be building an efficient plan in creating a content for your digital success, also by bridging the gap between a brand and influencer.
-                            With us, you would have a huge option of contents to choose from, considering the numbers of content creators that we are partnering with.
+                            Digitally Powerful is a team of influencers and content creators who are dedicated in fulfilling the digital marketing requirements of their clients. We work to build effective plans that focus on creating and connecting your content to the world, all while keeping your need for digital success in mind.
                         </p>
-                        <ul>
-                            <li><i class="ri-check-double-line"></i> Reliable, fast & efficient delivery</li>
-                            <li>
-                                <i class="ri-check-double-line"></i> World's top influencer marketing platform
-                                for campaigns on Instagram, Youtube, Tik
-                                Tok and more.
-                            </li>
-                            <li>
-                                <i class="ri-check-double-line"></i> To generate world-class content at scale, speed
-                                and a fraction of the cost.
-                            </li>
-                        </ul>
+                        <p>
+                            At Digitally Powerful, our sharp eye for detail in identifying key insights helps to create value from data that can drive meaningful creativity to your ideal audience. By partnering with us, we will bring to the table a wide range of content options, open and friendly communication, and strong execution that delivers measurable results.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -231,7 +220,7 @@
                             <div class="container aos-init aos-animate" data-aos="fade-up">
 
                                 <div class="section-title">
-                                    <p>We are associated with Meme Pages to market your brand and thereby creating brand awareness........ </p>
+                                    <p>We are associated with more than 200+ meme pages in Instagram and Facebook </p>
                                 </div>
 
                                 <div class="row">
