--- a/DigitallyPowerful/Views/User/Brand.cshtml
+++ b/DigitallyPowerful/Views/User/Brand.cshtml
@@ -15,17 +15,17 @@
                 <div class="col-md-8">
                     <div class="card card-with-nav">
                         <div class="card-body">
-                            <div class="row mt-3">
+                            <div class="row">
                                 <div class="col-md-6">
-                                    <div class="form-group form-floating-label">
-                                        <input id="BrandProfile_BrandName" type="text" class="form-control" required="">
+                                    <div class="form-group">
                                         <label for="BrandProfile_BrandName" class="placeholder">Brand Name</label>
+                                        <input id="BrandProfile_BrandName" type="text" class="form-control" required="">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="form-group form-floating-label">
-                                        <input id="BrandProfile_Name" type="text" class="form-control" required="">
+                                    <div class="form-group">
                                         <label for="BrandProfile_Name" class="placeholder">Your Name</label>
+                                        <input id="BrandProfile_Name" type="text" class="form-control" required="">
                                     </div>
                                 </div>
                             </div>
@@ -48,7 +48,7 @@
                                     <div class="form-group">
                                         <label for="BrandProfile_Project">Project Type</label>
                                         <select class="form-control form-control" id="BrandProfile_Project">
-                                            <option value="1">Influencer Marketing</option>
+                                            <option value="1" selected>Influencer Marketing</option>
                                             <option value="2">Others</option>
                                         </select>
                                     </div>
@@ -112,7 +112,7 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header">
-                            <div class="card-title">Contact</div>
+                            <div class="card-title">Contact Us</div>
                         </div>
                         <div class="card-body">
                             <div class="form-group row">
