--- a/DigitallyPowerful/wwwroot/css/style.css
+++ b/DigitallyPowerful/wwwroot/css/style.css
@@ -1857,3 +1857,228 @@ section {
 #Index_Influencer {
     border-radius: 10px;
 }
+
+
+
+.navbar1 {
+    padding: 0;
+}
+
+    .navbar1 ul {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        list-style: none;
+        align-items: center;
+    }
+
+    .navbar1 li {
+        position: relative;
+    }
+
+    .navbar1 a, .navbar1 a:focus {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px 0 10px 30px;
+        font-size: 15px;
+        font-weight: 500;
+        color: #fff;
+        white-space: nowrap;
+        transition: 0.3s;
+    }
+
+        .navbar1 a i, .navbar1 a:focus i {
+            font-size: 12px;
+            line-height: 0;
+            margin-left: 5px;
+        }
+
+        .navbar1 a:hover, .navbar1 .active, .navbar1 .active:focus, .navbar1 li:hover > a {
+            color: #47b2e4;
+        }
+
+    .navbar1 .getstarted {
+        padding: 8px 20px;
+        margin-left: 30px;
+        border-radius: 50px;
+        color: #fff;
+        font-size: 14px;
+        border: 2px solid #47b2e4;
+        font-weight: 600;
+    }
+
+        .navbar1 .getstarted:hover {
+            color: #fff;
+            background: #31a9e1;
+        }
+
+    .navbar1 .dropdown ul {
+        display: block;
+        position: absolute;
+        left: 14px;
+        top: calc(100% + 30px);
+        margin: 0;
+        padding: 10px 0;
+        z-index: 99;
+        opacity: 0;
+        visibility: hidden;
+        background: #fff;
+        box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+        transition: 0.3s;
+        border-radius: 4px;
+    }
+
+        .navbar1 .dropdown ul li {
+            min-width: 200px;
+        }
+
+        .navbar1 .dropdown ul a {
+            padding: 10px 20px;
+            font-size: 14px;
+            text-transform: none;
+            font-weight: 500;
+            color: #0c3c53;
+        }
+
+            .navbar1 .dropdown ul a i {
+                font-size: 12px;
+            }
+
+            .navbar1 .dropdown ul a:hover, .navbar1 .dropdown ul .active:hover, .navbar1 .dropdown ul li:hover > a {
+                color: #47b2e4;
+            }
+
+    .navbar1 .dropdown:hover > ul {
+        opacity: 1;
+        top: 100%;
+        visibility: visible;
+    }
+
+    .navbar1 .dropdown .dropdown ul {
+        top: 0;
+        left: calc(100% - 30px);
+        visibility: hidden;
+    }
+
+    .navbar1 .dropdown .dropdown:hover > ul {
+        opacity: 1;
+        top: 0;
+        left: 100%;
+        visibility: visible;
+    }
+
+@media (max-width: 1366px) {
+    .navbar1 .dropdown .dropdown ul {
+        left: -90%;
+    }
+
+    .navbar1 .dropdown .dropdown:hover > ul {
+        left: -100%;
+    }
+}
+
+/**
+* Mobile Navigation 
+*/
+.mobile-nav-toggle {
+    color: #fff;
+    font-size: 28px;
+    cursor: pointer;
+    display: none;
+    line-height: 0;
+    transition: 0.5s;
+}
+
+    .mobile-nav-toggle.bi-x {
+        color: #fff;
+    }
+
+@media (max-width: 991px) {
+    .mobile-nav-toggle {
+        display: block;
+    }
+
+    .navbar1 ul {
+        display: none;
+    }
+}
+
+.navbar-mobile {
+    position: fixed;
+    overflow: hidden;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: rgba(40, 58, 90, 0.9);
+    transition: 0.3s;
+    z-index: 999;
+}
+
+    .navbar-mobile .mobile-nav-toggle {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+    }
+
+    .navbar-mobile ul {
+        display: block;
+        position: absolute;
+        top: 55px;
+        right: 15px;
+        bottom: 15px;
+        left: 15px;
+        padding: 10px 0;
+        border-radius: 10px;
+        background-color: #fff;
+        overflow-y: auto;
+        transition: 0.3s;
+    }
+
+    .navbar-mobile a {
+        padding: 10px 20px;
+        font-size: 15px;
+        color: #37517e;
+    }
+
+        .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
+            color: #47b2e4;
+        }
+
+    .navbar-mobile .getstarted {
+        margin: 15px;
+        color: #37517e;
+    }
+
+    .navbar-mobile .dropdown ul {
+        position: static;
+        display: none;
+        margin: 10px 20px;
+        padding: 10px 0;
+        z-index: 99;
+        opacity: 1;
+        visibility: visible;
+        background: #fff;
+        box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+    }
+
+        .navbar-mobile .dropdown ul li {
+            min-width: 200px;
+        }
+
+        .navbar-mobile .dropdown ul a {
+            padding: 10px 20px;
+        }
+
+            .navbar-mobile .dropdown ul a i {
+                font-size: 12px;
+            }
+
+            .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
+                color: #47b2e4;
+            }
+
+    .navbar-mobile .dropdown > .dropdown-active {
+        display: block;
+    }
