--- a/DigitallyPowerful/Views/Shared/_Layout.cshtml
+++ b/DigitallyPowerful/Views/Shared/_Layout.cshtml
@@ -74,8 +74,8 @@
                             <ul>
                                 <li><i class="bx bx-chevron-right"></i> <a asp-controller="Home" asp-action="Index">Home</a></li>
                                 <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-                                <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-                                <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+                                <li><i class="bx bx-chevron-right"></i> <a asp-controller="Home" asp-action="TermsandCondition" target="_blank">Terms and Conditions</a></li>
+                                <li><i class="bx bx-chevron-right"></i> <a asp-controller="Home" asp-action="PrivacyPolicy" target="_blank">Privacy policy</a></li>
                             </ul>
                         </div>
 
