--- a/DigitallyPowerful/Views/User/PasswordChange.cshtml
+++ b/DigitallyPowerful/Views/User/PasswordChange.cshtml
@@ -18,7 +18,7 @@
             <h3 class="text-center">Change Password</h3>
             <div class="login-form">
                 <div class="form-group form-floating-label">
-                    <input id="changepassword_username" name="changepassword_username" type="text" class="form-control input-border-bottom" required>
+                    <input id="changepassword_username" name="changepassword_username" type="email" class="form-control input-border-bottom" required>
                     <label for="changepassword_username" class="placeholder">Email</label>
                 </div>
                 <div class="form-group form-floating-label">
