--- a/DigitallyPowerful/Views/User/Signup.cshtml
+++ b/DigitallyPowerful/Views/User/Signup.cshtml
@@ -7,11 +7,7 @@
 <html lang="en">
 
 <body class="login">
-    <header id="header" class="fixed-top " style="background: #f9fbfd">
-        <div class="container d-flex align-items-center">
-             <a asp-controller="Home" asp-action="Index" class="logo me-auto"><img src="~/images/DigitallyPowerful.png" alt="Digitally Powerful" class="img-fluid"></a>
-        </div>
-    </header>
+
     <!-- End Header -->
     <div class="wrapper wrapper-login">
         <!-- ======= Sign up START ======= -->
@@ -27,7 +23,7 @@
                     <label for="Lastname_Influencers" class="placeholder">Last Name</label>
                 </div>
                 <div class="form-group form-floating-label">
-                    <input id="Mobile_Influencers" name="Mobile_Influencers" type="tel" class="form-control input-border-bottom" required="">
+                    <input id="Mobile_Influencers" name="Mobile_Influencers" type="tel" class="form-control input-border-bottom" required="" maxlength="10"s>
                     <label for="Mobile_Influencers" class="placeholder">Mobile *</label>
                 </div>
                 <div class="form-group form-floating-label">
