Youtubers added with other fixes

--- a/DigitallyPowerful/Views/Home/Index.cshtml
+++ b/DigitallyPowerful/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="section-title">
                     <h2>Brands</h2>
-                    <p>We have worked with Popular brands as well as small entities in setting up campaigns to create a powerful business digitally.</p>
+                    <p>Digitally Powerful has worked with and led numerous well-known and small-scale brands towards their intended success by setting up effective campaigns and making captivating content.</p>
                 </div>
                 <div class="row" data-aos="zoom-in">
 
@@ -113,7 +113,7 @@
 
                 <div class="section-title">
                     <h2>Network</h2>
-                    <p>From renowned celebrities to local micro influencers, from Instagram legends to Tik Tok stars and from individuals to large companies, Digitally Powerful has access to a truly wide network.</p>
+                    <p>When you're looking for influencers,youtubers and meme creators to help drive your message to a larger audience, you want the confidence in knowing that the people you're working with are experts in their field. Hand-picked based on the values of top quality content creation and high audience engagement, Digitally Powerful influencers ,youtubers and meme creators are the real deal. Each one has joined our creator network with complete readiness to partner with you to help improve brand awareness and increase conversions.</p>
                 </div>
 
                 <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
@@ -209,9 +209,27 @@
                     </div>
 
                     <div class="col-lg-4 col-md-6 portfolio-item filter-YouTubers">
-                        <div class="portfolio-img"><img src="~/images/DigitallyPowerful_Poster.png" class="img-fluid" alt=""></div>
+                        <div class="portfolio-img"><img src="~/images/Influencers/WearetheBoysu.jpg" class="img-fluid" alt=""></div>
                         <div class="portfolio-info">
-                            <h4>Digitally Powerful</h4>
+                            <h4>We Are The Boys'U</h4>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-YouTubers">
+                        <div class="portfolio-img"><img src="~/images/Influencers/Parithabangal.jpg" class="img-fluid" alt=""></div>
+                        <div class="portfolio-info">
+                            <h4>Parithabangal</h4>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-YouTubers">
+                        <div class="portfolio-img"><img src="~/images/Influencers/Comali.jpg" class="img-fluid" alt="" style="width: 168%;"></div>
+                        <div class="portfolio-info">
+                            <h4>Comali</h4>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-YouTubers">
+                        <div class="portfolio-img"><img src="~/images/Influencers/Pongal.png" class="img-fluid" alt=""></div>
+                        <div class="portfolio-info">
+                            <h4>Pongal</h4>
                         </div>
                     </div>
 
