--- a/DigitallyPowerful/Views/Shared/_UserLayout.cshtml
+++ b/DigitallyPowerful/Views/Shared/_UserLayout.cshtml
@@ -99,10 +99,10 @@
                                 Influencer led marketing platform for campaigns on Instagram, Youtube, Facebook and more social networks.
                             </p>
                             <div class="social-links mt-3">
-                                <a href="#" class="instagram" style="background-color: #fb3958"><i class="bx bxl-instagram"></i></a>
-                                <a href="#" class="facebook" style="background-color: #4267B2"><i class="bx bxl-facebook"></i></a>
-                                <a href="#" class="twitter" style="background-color: #1DA1F2"><i class="bx bxl-twitter"></i></a>
-                                <a href="https://api.whatsapp.com/send?phone=+919342038434" style="background-color: #00e676" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+                                <a href="https://www.instagram.com/digitallypowerful" target="_blank" class="instagram" style="background-color: #fb3958"><i class="bx bxl-instagram"></i></a>
+                                <a href="https://www.facebook.com/digitallypowerful" target="_blank" class="facebook" style="background-color: #4267B2"><i class="bx bxl-facebook"></i></a>
+                                <a href="https://www.twitter.com/digitallypower" target="_blank" class="twitter" style="background-color: #1DA1F2"><i class="bx bxl-twitter"></i></a>
+                                <a href="https://api.whatsapp.com/send?phone=+919342038434" target="_blank" style="background-color: #00e676" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
                             </div>
                         </div>
 
