--- a/DigitallyPowerful/Views/User/Influencer.cshtml
+++ b/DigitallyPowerful/Views/User/Influencer.cshtml
@@ -61,19 +61,19 @@
 
                                             <div class="col-md-9">
                                                 <div class="selectgroup selectgroup-secondary selectgroup-pills">
-                                                    <label class="selectgroup-item">
+                                                    <label class="selectgroup-item" title="Female">
                                                         <input type="radio" id="Female" name="icon-input" value="Female" class="selectgroup-input" checked="">
                                                         <span class="selectgroup-button selectgroup-button-icon"><i class="fas fa-venus"></i></span>
                                                     </label>
-                                                    <label class="selectgroup-item">
+                                                    <label class="selectgroup-item" title="Male">
                                                         <input type="radio" id="Male" name="icon-input" value="Male" class="selectgroup-input">
                                                         <span class="selectgroup-button selectgroup-button-icon"><i class="fas fa-mars"></i></span>
                                                     </label>
-                                                    <label class="selectgroup-item">
+                                                    <label class="selectgroup-item" title="Transgender">
                                                         <input type="radio" id="Transgender" name="icon-input" value="Transgender" class="selectgroup-input">
                                                         <span class="selectgroup-button selectgroup-button-icon"><i class="fas fa-transgender"></i></span>
                                                     </label>
-                                                    <label class="selectgroup-item">
+                                                    <label class="selectgroup-item" title="Prefer Not To Say">
                                                         <input type="radio" id="PreferNotToSay" name="icon-input" value="PreferNotToSay" class="selectgroup-input">
                                                         <span class="selectgroup-button selectgroup-button-icon"><i class="fas fa-neuter"></i></span>
                                                     </label>
@@ -135,7 +135,7 @@
                                                 </div>
                                             </td>
                                             <td>
-                                                <div class="form-group" style="width:200px">
+                                                <div class="form-group">
                                                     <div class="input-group">
                                                         <input type="number" id="InstaCount" class="form-control" aria-label="Text input with dropdown button">
                                                         <div class="input-group-append">
